@@ -1,3 +1,4 @@
+* Tue Oct 06 2008 Ding-Yi Chen <dchen at redhat dot com> - 0.5.2-0
 - New Features:
   + New pseudo field 'ZhuYin'.
   + allocate.h is in API.
